navbar authors fixes & ui styling new tab on github links in authors dropdown alt prop added to images player dropdown height & font & width increased on mobile devices

--- a/websource/src/components/PlayerList/PlayerDropdown.css
+++ b/websource/src/components/PlayerList/PlayerDropdown.css
@@ -80,3 +80,14 @@
 	border-radius: 8px;
 	height: 38px;
 }
+
+@media only screen and (max-width: 600px) {
+	.playerMenu {
+		height: 48px;
+		width: 230px;
+	}
+
+	.playerMenu > button {
+		font-size: 16px;
+	}
+}
